--- a/index.html
+++ b/index.html
@@ -616,20 +616,51 @@
                         <div class="bb-custom-wrapper">
                             <div id="bb-bookblock_1" class="bb-bookblock">
                                 <div class="bb-item">
-                                    <a><img src="assets/images/album-1.png" alt="image01" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_1.jpg" alt="Layout_1" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/album-2.png" alt="image02" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_2.jpg" alt="Layout_2" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/album-1.png" alt="image03" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_3.jpg" alt="Layout_3" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/album-2.png" alt="image04" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_4.jpg" alt="Layout_4" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/album-1.png" alt="image05" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_5.jpg" alt="Layout_5" /></a>
                                 </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum1/Layout_6.jpg" alt="Layout_6" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum1/Layout_7.jpg" alt="Layout_7" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum1/Layout_8.jpg" alt="Layout_8" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum1/Layout_9.jpg" alt="Layout_9" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum1/Layout_10.jpg" alt="Layout_10" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum1/Layout_11.jpg" alt="Layout_11" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum1/Layout_12.jpg" alt="Layout_12" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum1/Layout_13.jpg" alt="Layout_13" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum1/Layout_14.jpg" alt="Layout_14" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum1/Layout_15.jpg" alt="Layout_15" /></a>
+                                </div>
+
                             </div>
                             <nav>
                                 <a id="bb-nav-first_1" href="#" class="bb-custom-icon bb-custom-icon-first">First
@@ -651,7 +682,8 @@
                             <p>“Trong sắc đỏ, tình yêu thắm mãi.”</p>
                         </div>
                         <div class="box-ablum-image-container">
-                            <div class="box-ablum-image box-ablum-image-2 wow shakeX" data-wow-duration="1.3s" data-wow-delay="0.6s">
+                            <div class="box-ablum-image box-ablum-image-2 wow shakeX" data-wow-duration="1.3s"
+                                data-wow-delay="0.6s">
                                 <img src="assets/images/album-2.png" alt="ablum">
                             </div>
                         </div>
@@ -662,19 +694,49 @@
                         <div class="bb-custom-wrapper">
                             <div id="bb-bookblock_2" class="bb-bookblock">
                                 <div class="bb-item">
-                                    <a><img src="assets/images/album-1.png" alt="image01" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_1.jpg" alt="Layout_1" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/album-2.png" alt="image02" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_2.jpg" alt="Layout_2" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/album-1.png" alt="image03" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_3.jpg" alt="Layout_3" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/album-2.png" alt="image04" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_4.jpg" alt="Layout_4" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/album-1.png" alt="image05" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_5.jpg" alt="Layout_5" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum2/Layout_6.jpg" alt="Layout_6" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum2/Layout_7.jpg" alt="Layout_7" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum2/Layout_8.jpg" alt="Layout_8" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum2/Layout_9.jpg" alt="Layout_9" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum2/Layout_10.jpg" alt="Layout_10" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum2/Layout_11.jpg" alt="Layout_11" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum2/Layout_12.jpg" alt="Layout_12" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum2/Layout_13.jpg" alt="Layout_13" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum2/Layout_14.jpg" alt="Layout_14" /></a>
+                                </div>
+                                <div class="bb-item">
+                                    <a><img src="assets/images/Ablum2/Layout_15.jpg" alt="Layout_15" /></a>
                                 </div>
                             </div>
                             <nav>
