--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brand" href="index.html">
+                            <a id="UrlHome" class="navbar-brand" href="index.html">
                                 <img src="assets/images/logo-2.png" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -64,7 +64,7 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ml-auto">
                                     <li class="nav-item active">
-                                        <a class="page-scroll" data-id="gallery">Gallery</a>
+                                        <a class="page-scroll" data-id="gallery" id="btnGallery">Gallery</a>
                                     </li>
                                     <li class="nav-item buttons-language">
                                         <a class="page-scroll changelang" id="btnLanguage" data-languageid="1066"></a>                                        
@@ -88,7 +88,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section_title text-center pb-30">
-                        <h3 class="title">Concept Dream Future</h3>
+                        <h3 class="title" id="Title1">Concept Dream Future</h3>
                         <img src="assets/images/section_shape.png" alt="Shape">
                     </div>
                 </div>
@@ -117,7 +117,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section_title text-center pb-30">
-                        <h3 class="title">Concept Studio</h3>
+                        <h3 class="title" id="Title2">Concept Studio</h3>
                         <img src="assets/images/section_shape.png" alt="Shape">
                     </div>
                 </div>
@@ -145,7 +145,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section_title text-center pb-30">
-                        <h3 class="title">Concept Hỷ Phục</h3>
+                        <h3 class="title" id="Title3">Concept Hỷ Phục</h3>
                         <img src="assets/images/section_shape.png" alt="Shape">
                     </div>
                 </div>
@@ -173,7 +173,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section_title text-center pb-30">
-                        <h3 class="title">Concept Việt Phục</h3>
+                        <h3 class="title" id="Title4">Concept Việt Phục</h3>
                         <img src="assets/images/section_shape.png" alt="Shape">
                     </div>
                 </div>
@@ -207,18 +207,18 @@
                     <a href="#"><img src="assets/images/logo-2.png" alt="logo"></a>
                 </div>
                 <div class="footer_title">
-                    <h3 class="title">Bá Đông <span>&</span> Thanh Thảo</h3>
+                    <h3 class="title" id="TitleFooter">Bá Đông <span>&</span> Thanh Thảo</h3>
                 </div>
                 <ul class="footer_menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Couple</a></li>
-                    <li><a href="#">Story</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Event</a></li>
-                    <li><a href="#">RSVP</a></li>
+                    <li><a href="#" id="fmenu_1">Home</a></li>
+                    <li><a href="#" id="fmenu_2">Couple</a></li>
+                    <li><a href="#" id="fmenu_3">Story</a></li>
+                    <li><a href="#" id="fmenu_4">Gallery</a></li>
+                    <li><a href="#" id="fmenu_5">Ablum</a></li>
+                    <li><a href="#" id="fmenu_6">Event</a></li>
                 </ul>
             </div> <!-- footer content -->
-            <div class="footer_copyright text-center">
+            <div class="footer_copyright text-center" id="copyright">
                 <p>Designed and Developed by <a href="https://www.facebook.com/donglb97" style="color: #D59A57"
                         rel="nofollow">Bá Đông </a>
                         <span> & </span>
