--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     var photoGalleries = [];
 </script>
 
-<body class="HeartFall">
+<body class="HeartFall lang-vi">
     <div class="preloader">
         <div class="loader">
             <div class="ytp-spinner">
