--- a/index_china.html
+++ b/index_china.html
@@ -148,7 +148,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="slider_content text-center">
-                            <h5 class="slider_sub_title animated fadeInDown">我们结婚啦</h5>
+                            <h5 class="slider_sub_title animated fadeInDown">我們結婚啦</h5>
                             <h2 class="slider_title animated fadeInDown">李柏東 <span>&</span> 杜氏青草</h2>
                             <span class="location animated fadeInUp">亞東婚慶中心</span>
                             <p class="animated fadeInUp">
@@ -185,11 +185,9 @@
                         <div class="couple_content text-center">
                             <img class="shape" src="assets/images/couple-shape.png" alt="shape">
                             <h4 class="couple_name">李柏東</h4>
-                            <p>你好，我是李柏東，是一個性格溫和、話不多的人。
+                            <p>你好，我是李柏東，是一個性格和善、話不多的人。
                                 我一直很重視感情，深愛著我的家庭。
-                                <br />
-                                對我來說：「家庭是最堅實的依靠，是每個人心中最安寧的港灣。
-                                那是一個充滿愛與溫暖的地方，永遠值得我們歸來！」
+                                對我來說：「家庭是最堅實的依靠，是每個人心中最安寧的港灣。那是一個充滿愛與真情的地方，永遠值得我們歸來！」
                             </p>
                             <ul class="social">
                                 <li><a href="https://www.facebook.com/donglb97"><i
@@ -212,8 +210,8 @@
                             <img class="shape" src="assets/images/couple-shape.png" alt="shape">
                             <h4 class="couple_name">杜氏青草</h4>
                             <p>你好，我是杜氏清草，來自廣義，目前在胡志明市生活和工作。
-                                我是一個愛笑、卻內心細膩的女孩，喜歡旅遊、看電影和做飯。
-                                除此之外，我還特別喜歡種植物，夢想著將來擁有一個屬於自己的小花園。</p>
+                                我是一個愛笑、心思細膩的女孩，喜歡旅行、看電影和做飯。
+                                此外，我很喜歡種植物，夢想著將來擁有一個屬於自己的小花園。</p>
                             <ul class="social">
                                 <li><a href="https://www.facebook.com/thaodtt97"><i
                                             class="lni lni-facebook-filled"></i></a></li>
@@ -678,7 +676,7 @@
                     <a id="ablum2" class="ablum-popup">
                         <div class="box-text-ablum">
                             <h3>浪漫 - 傳統</h3>
-                            <p>"在紅色的映襯下，愛情永恆"</p>
+                            <p>"在紅色的映襯下，愛情綻放不止"</p>
                         </div>
                         <div class="box-ablum-image-container">
                             <div class="box-ablum-image box-ablum-image-2 wow shakeX" data-wow-duration="1.3s"
