--- a/index.html
+++ b/index.html
@@ -575,7 +575,8 @@
             </div>
 
             <div class="box-see-more wow fadeInDown">
-                <a href="gallery.html"><span>Xem Thêm </span><i class="lg-next lg-icon"></i></a>
+                <!-- <a href="gallery.html"><span>Xem Thêm </span><i class="lg-next lg-icon"></i></a> -->
+                 <a href="gallery.html"><span>Xem Thêm -></span></a>
             </div>
         </div>
     </section>
