--- a/index_china.html
+++ b/index_china.html
@@ -307,7 +307,7 @@
                         </p>
                     </div>
                     <div class="love_date">
-                        <p><i class="lni lni-heart-filled"></i> 2016年<br>2<br>月<br>20<br>日</p>
+                        <p><i class="lni lni-heart-filled"></i> 2016年2月20日</p>
                     </div>
                     <div class="love_image order-md-first wow fadeInRightBig" data-wow-duration="1.3s"
                         data-wow-delay="0.4s">
@@ -330,7 +330,7 @@
                         </p>
                     </div>
                     <div class="love_date">
-                        <p><i class="lni lni-heart-filled"></i> 2020<br>年<br>9<br>月<br>11<br>日</p>
+                        <p><i class="lni lni-heart-filled"></i> 2020年9月11日</p>
                     </div>
                     <div class="love_image wow fadeInLeftBig" data-wow-duration="1.3s" data-wow-delay="0.4s">
                         <div class="boxLoveStory loveStory2">
@@ -348,7 +348,7 @@
                             我们并不完美，但始终选择在一起。</p>
                     </div>
                     <div class="love_date">
-                        <p><i class="lni lni-heart-filled"></i> 2020 <br>年<br> - <br>2024<br>年</p>
+                        <p><i class="lni lni-heart-filled"></i> 2020 年 - 2024年</p>
                     </div>
                     <div class="love_image order-md-first wow fadeInRightBig" data-wow-duration="1.3s"
                         data-wow-delay="0.4s">
@@ -371,7 +371,7 @@
                         </p>
                     </div>
                     <div class="love_date">
-                        <p><i class="lni lni-heart-filled"></i> 2024<br>年<br>4<br>月<br>27<br>日</p>
+                        <p><i class="lni lni-heart-filled"></i> 2024年4月27日</p>
                     </div>
                     <div class="love_image wow fadeInLeftBig" data-wow-duration="1.3s" data-wow-delay="0.4s">
                         <div class="boxLoveStory loveStory4">
@@ -387,7 +387,7 @@
                         <p>“我要让你成为最幸福的新娘” - 你曾这样说，而你真的做到了。</p>
                     </div>
                     <div class="love_date">
-                        <p><i class="lni lni-heart-filled"></i> 2024<br>年<br>4<br>月<br>27<br>日</p>
+                        <p><i class="lni lni-heart-filled"></i> 2024年4月27日</p>
                     </div>
                     <div class="love_image order-md-first wow fadeInRightBig" data-wow-duration="1.3s"
                         data-wow-delay="0.4s">
@@ -572,7 +572,8 @@
             </div>
 
             <div class="box-see-more wow fadeInDown">
-                <a href="gallery.html"><span>更多 </span><i class="lg-next lg-icon"></i></a>
+                <!-- <a href="gallery.html"><span>更多 </span><i class="lg-next lg-icon"></i></a> -->
+                 <a href="gallery.html"><span>更多 -></span></a>
             </div>
         </div>
     </section>
