--- a/index_china.html
+++ b/index_china.html
@@ -106,31 +106,31 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="single_slider bg_cover d-flex align-items-center"
-                        style="background-image: url(assets/images/slider-1.png)">
+                        style="background-image: url(assets/images/slider-1.jpg)">
 
                     </div> <!-- single slider -->
                 </div>
                 <div class="carousel-item">
                     <div class="single_slider bg_cover d-flex align-items-center"
-                        style="background: url(assets/images/slider-2.png) top -80px center/cover no-repeat local; ">
+                        style="background: url(assets/images/slider-2.jpg) top -80px center/cover no-repeat local; ">
 
                     </div> <!-- single slider -->
                 </div>
                 <div class="carousel-item">
                     <div class="single_slider bg_cover d-flex align-items-center"
-                        style="background: url(assets/images/slider-3.png) center center/cover no-repeat local;">
+                        style="background: url(assets/images/slider-3.jpg) center center/cover no-repeat local;">
 
                     </div> <!-- single slider -->
                 </div>
                 <div class="carousel-item">
                     <div class="single_slider bg_cover d-flex align-items-center"
-                        style="background-image: url(assets/images/slider-4.png)">
+                        style="background-image: url(assets/images/slider-4.jpg)">
 
                     </div> <!-- single slider -->
                 </div>
                 <div class="carousel-item">
                     <div class="single_slider bg_cover d-flex align-items-center"
-                        style="background: url(assets/images/slider-5.png) top -80px center/cover no-repeat local;">
+                        style="background: url(assets/images/slider-5.jpg) top -80px center/cover no-repeat local;">
 
                     </div> <!-- single slider -->
                 </div>
