--- a/index_china.html
+++ b/index_china.html
@@ -180,7 +180,7 @@
                 <div class="col-md-6">
                     <div class="single_couple mt-30 wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.2s">
                         <div class="couple_image">
-                            <img src="assets/images/avarta_1.png" alt="Couple">
+                            <img src="assets/images/avarta_1.jpg" alt="Couple">
                         </div>
                         <div class="couple_content text-center">
                             <img class="shape" src="assets/images/couple-shape.png" alt="shape">
@@ -204,7 +204,7 @@
                 <div class="col-md-6">
                     <div class="single_couple mt-30 wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.6s">
                         <div class="couple_image">
-                            <img src="assets/images/avarta_2.png" alt="Couple">
+                            <img src="assets/images/avarta_2.jpg" alt="Couple">
                         </div>
                         <div class="couple_content text-center">
                             <img class="shape" src="assets/images/couple-shape.png" alt="shape">
@@ -406,7 +406,7 @@
 
     <section id="video" class="video-section event-section section-padding pt-120">
         <div class="top-area"
-            style="background: url(./assets/images/video_background.png) top -80px center/cover no-repeat local; ">
+            style="background: url(./assets/images/video_background.jpg) top -80px center/cover no-repeat local; ">
             <h2>我们的爱情视频</h2>
             <img src="assets/images/section_shape.png" alt="Shape"
                 style="filter: brightness(0) invert(1); margin-block: 10px 20px; ">
