--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                         </div>
                         <div class="box-ablum-image-container">
                             <div class="box-ablum-image wow shakeX" data-wow-duration="1.3s" data-wow-delay="0.6s">
-                                <img src="assets/images/album-1.png" alt="ablum">
+                                <img src="assets/images/album-1.jpg" alt="ablum">
                             </div>
                         </div>
                     </a>
@@ -685,7 +685,7 @@
                         <div class="box-ablum-image-container">
                             <div class="box-ablum-image box-ablum-image-2 wow shakeX" data-wow-duration="1.3s"
                                 data-wow-delay="0.6s">
-                                <img src="assets/images/album-2.png" alt="ablum">
+                                <img src="assets/images/album-2.jpg" alt="ablum">
                             </div>
                         </div>
                     </a>
