--- a/index_china.html
+++ b/index_china.html
@@ -801,8 +801,8 @@
                         </div>
                         <div class="event_content">
                             <span class="date">2025年11月29日</span>
-                            <h3 class="event_title"><a href="#">婚禮儀式</a></h3>
-                            <p>婚礼仪式 - 这是我们正式步入婚姻殿堂的日子，
+                            <h3 class="event_title"><a href="#">婚礼儀式</a></h3>
+                            <p>婚礼儀式 - 这是我们正式步入婚姻殿堂的日子，
                                 不仅是为了建立一个温暖的家，更是为了分享生活中的每一个快乐与挑战。
                                 从今天起，我们将一起欢笑、一起相爱，
                                 手牵手走过人生的每一个阶段。</p>
