--- a/index_china.html
+++ b/index_china.html
@@ -454,7 +454,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/Dream/20250612_225056700_iOS.webp" alt="gallery">
+                                <img src="assets/images/Gallery/Dream/20250612_225056700_iOS.webp" alt="gallery" loading="lazy">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
@@ -468,7 +468,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/Dream/20250613_002704190_iOS.webp" alt="gallery">
+                                <img src="assets/images/Gallery/Dream/20250613_002704190_iOS.webp" alt="gallery" loading="lazy">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
@@ -482,7 +482,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/Dream/20250613_012910430_iOS.webp" alt="gallery">
+                                <img src="assets/images/Gallery/Dream/20250613_012910430_iOS.webp" alt="gallery" loading="lazy">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
@@ -496,7 +496,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/Studio/20250622_025831460_iOS.webp" alt="gallery">
+                                <img src="assets/images/Gallery/Studio/20250622_025831460_iOS.webp" alt="gallery" loading="lazy">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
@@ -510,7 +510,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/HyPhuc/20250622_053056940_iOS.webp" alt="gallery"
+                                <img src="assets/images/Gallery/HyPhuc/20250622_053056940_iOS.webp" alt="gallery" loading="lazy"
                                     style="object-position: top;">
                             </div>
                             <div class="gallery_content">
@@ -528,7 +528,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/HyPhuc/20250622_051433990_iOS.webp" alt="gallery">
+                                <img src="assets/images/Gallery/HyPhuc/20250622_051433990_iOS.webp" alt="gallery" loading="lazy">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
@@ -542,7 +542,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/VietPhuc/20250622_042602110_iOS.webp" alt="gallery"
+                                <img src="assets/images/Gallery/VietPhuc/20250622_042602110_iOS.webp" alt="gallery" loading="lazy"
                                     style="object-position: top;">
                             </div>
                             <div class="gallery_content">
@@ -557,7 +557,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/VietPhuc/20250622_042445990_iOS.webp" alt="gallery">
+                                <img src="assets/images/Gallery/VietPhuc/20250622_042445990_iOS.webp" alt="gallery" loading="lazy">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
