--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
             </span>
         </div>
     </div>
-    <audio style="display: none;" id="audio-music" src="assets/music/wedding.mp3"></audio>
+    <audio style="display: none;" id="audio-music" preload="none" src="assets/music/wedding.mp3"></audio>
 
     <!--====== player ENDS ======-->
 
