--- a/chooselanguage.html
+++ b/chooselanguage.html
@@ -71,7 +71,7 @@
                 <div class="language-option" data-language="1033">
                     <span ic ic-vn-flag></span> Tiếng Việt
                 </div>
-                <div class="language-option" data-language="1066">
+                <div class="language-option fontChina" data-language="1066">
                     <span ic ic-cn-flag></span> 中文
                 </div>
             </div>
