--- a/index_china.html
+++ b/index_china.html
@@ -1009,7 +1009,7 @@
             </span>
         </div>
     </div>
-    <audio style="display: none;" id="audio-music" preload="none" src="assets/music/wedding.mp3"></audio>
+    <audio style="display: none;" id="audio-music" preload="none" src="assets/music/wedding_china.mp3"></audio>
 
     <!--====== player ENDS ======-->
 
