--- a/index.html
+++ b/index.html
@@ -617,49 +617,49 @@
                         <div class="bb-custom-wrapper">
                             <div id="bb-bookblock_1" class="bb-bookblock">
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_1.jpg" alt="Layout_1" loading="lazy" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_1.jpg" alt="Layout_1" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_2.jpg" alt="Layout_2" loading="lazy" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_2.jpg" alt="Layout_2" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_3.jpg" alt="Layout_3" loading="lazy" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_3.jpg" alt="Layout_3" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_4.jpg" alt="Layout_4" loading="lazy" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_4.jpg" alt="Layout_4" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_5.jpg" alt="Layout_5" loading="lazy" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_5.jpg" alt="Layout_5" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_6.jpg" alt="Layout_6" loading="lazy" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_6.jpg" alt="Layout_6" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_7.jpg" alt="Layout_7" loading="lazy" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_7.jpg" alt="Layout_7" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_8.jpg" alt="Layout_8" loading="lazy" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_8.jpg" alt="Layout_8" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_9.jpg" alt="Layout_9" loading="lazy" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_9.jpg" alt="Layout_9" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_10.jpg" alt="Layout_10" loading="lazy" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_10.jpg" alt="Layout_10" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_11.jpg" alt="Layout_11" loading="lazy" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_11.jpg" alt="Layout_11" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_12.jpg" alt="Layout_12" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum1/Layout_12.jpg" alt="Layout_12" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_13.jpg" alt="Layout_13" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum1/Layout_13.jpg" alt="Layout_13" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_14.jpg" alt="Layout_14" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum1/Layout_14.jpg" alt="Layout_14" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_15.jpg" alt="Layout_15" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum1/Layout_15.jpg" alt="Layout_15" /></a>
                                 </div>
 
                             </div>
@@ -695,49 +695,49 @@
                         <div class="bb-custom-wrapper">
                             <div id="bb-bookblock_2" class="bb-bookblock">
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_1.jpg" alt="Layout_1" loading="lazy" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_1.jpg" alt="Layout_1" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_2.jpg" alt="Layout_2" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_2.jpg" alt="Layout_2" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_3.jpg" alt="Layout_3" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_3.jpg" alt="Layout_3" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_4.jpg" alt="Layout_4" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_4.jpg" alt="Layout_4" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_5.jpg" alt="Layout_5" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_5.jpg" alt="Layout_5" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_6.jpg" alt="Layout_6" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_6.jpg" alt="Layout_6" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_7.jpg" alt="Layout_7" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_7.jpg" alt="Layout_7" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_8.jpg" alt="Layout_8" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_8.jpg" alt="Layout_8" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_9.jpg" alt="Layout_9" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_9.jpg" alt="Layout_9" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_10.jpg" alt="Layout_10" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_10.jpg" alt="Layout_10" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_11.jpg" alt="Layout_11" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_11.jpg" alt="Layout_11" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_12.jpg" alt="Layout_12" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_12.jpg" alt="Layout_12" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_13.jpg" alt="Layout_13" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_13.jpg" alt="Layout_13" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_14.jpg" alt="Layout_14" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_14.jpg" alt="Layout_14" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_15.jpg" alt="Layout_15" loading="lazy"/></a>
+                                    <a><img src="assets/images/Ablum2/Layout_15.jpg" alt="Layout_15" /></a>
                                 </div>
                             </div>
                             <nav>
